sublime-gulp.log
Remember that you can report errors and get help in https://github.com/NicoSantangelo/sublime-gulp

03-02-2016 10:43:
C:\Users\SANIX_CORERD\workspace\sanix-eyes\.sublime-gulp-tmp.js:26
        .pipe(jade({pretty: true}}
                                 ^
SyntaxError: Unexpected token }
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:460:26)


03-02-2016 10:43:
C:\Users\SANIX_CORERD\workspace\sanix-eyes\.sublime-gulp-tmp.js:26
        .pipe(jade({pretty: true}}
                                 ^
SyntaxError: Unexpected token }
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:460:26)


03-02-2016 10:43:
C:\Users\SANIX_CORERD\workspace\sanix-eyes\.sublime-gulp-tmp.js:26
    .pipe(jade({pretty: true.pipe(gulp.dest('folder.pipe(gulp.dest('folder'));
                                                                    ^^^^^^
SyntaxError: Unexpected identifier
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:460:26)


03-02-2016 10:44:
C:\Users\SANIX_CORERD\workspace\sanix-eyes\.sublime-gulp-tmp.js:26
    .pipe(jade({pretty: true.pipe(gulp.dest('folder.pipe(gulp.dest('folder'));
                                                                    ^^^^^^
SyntaxError: Unexpected identifier
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:460:26)


03-02-2016 10:44:
C:\Users\SANIX_CORERD\workspace\sanix-eyes\.sublime-gulp-tmp.js:26
        .pipe(jade({pretty: true}}
                                 ^
SyntaxError: Unexpected token }
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:460:26)


03-02-2016 10:44:
C:\Users\SANIX_CORERD\workspace\sanix-eyes\.sublime-gulp-tmp.js:26
        .pipe(jade({pretty: true}})
                                 ^
SyntaxError: Unexpected token }
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:460:26)


03-02-2016 10:45:
C:\Users\SANIX_CORERD\workspace\sanix-eyes\.sublime-gulp-tmp.js:26
        .pipe(jade({pretty: true}}))
                                 ^
SyntaxError: Unexpected token }
    at exports.runInThisContext (vm.js:73:16)
    at Module._compile (module.js:443:25)
    at Object.Module._extensions..js (module.js:478:10)
    at Module.load (module.js:355:32)
    at Function.Module._load (module.js:310:12)
    at Module.require (module.js:365:17)
    at require (module.js:384:17)
    at requireGulp (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:28:16)
    at Object.<anonymous> (C:\Users\SANIX_CORERD\AppData\Roaming\Sublime Text 3\Packages\Gulp\write_tasks_to_cache.js:83:12)
    at Module._compile (module.js:460:26)
